     Ctrl+C/Command+C (bug #5877)
 * WML engine:
   * [unit_overlay] and [remove_unit_overlay] now return a more meaningful
     error message if the image= key is missing
   * When not replacing values, [effect] apply_to=defense will now modify
     absolute values instead of signed values (bug #20242). This allows for
     cleaner WML when the unit type is not necessarily known in advance.
 * Miscellaneous and bug fixes:
   * The undo stack is preserved across a save-reload.
   * Removed several unused private member variables.
   * Fixed the present in-game command line autocompletion feature so it
     actually works at all
   * Removed recognition of the --smallgui command line option, which has been
     superfluous since 1.9.5.

Version 1.11.1:
 * AI:
   * New AI: Experimental AI
     * Improved recruitment, castle and village management over current default AI
 * Campaigns:
   * Dead Water:
     * Removed duplicated loyalty overlay (that now is in core), and used
       {IS_LOYAL} macro
     * Stunned units are now marked with a status icon
   * Delfador's Memoirs
     * Add dummy side to cutscene to avoid crash at end of story part
       (bug #20208)
   * Eastern Invasion:
     * New set of portraits
   * Legend of Wesmere:
     * Scenario 02: Replaced the moveto events for checking the
       dwarvish borders with enter_hex events
     * Scenario 08: Add dummy side to cutscene to avoid crash at end of story
       part (bug #20208)
   * The Rise of Wesnoth:
     * Fix bug #16772: AI won't attack
   * Under the Burning Suns:
     * Keep a spawned unit from disappearing on reload in scenario 6b
     * Stunned units are now marked with a status icon
     * Fix bug #19303: dwarf sometimes spawns in cave wall
 * Graphics:
   * New portraits: Tentacle of the Deep
   * Updated brown lich alternative portrait
   * Fixed glitches caused by larger-than-hex standing units with certain frame
     image effects when image= is not explicitly specified (bug #20099)