@@ -24,7 +24,15 @@
         description= _ "Immune to drain, poison, and plague"
         [effect]
             apply_to=status
-            add=not_living
+            add=unpoisonable
+        [/effect]
+        [effect]
+            apply_to=status
+            add=undrainable
+        [/effect]
+        [effect]
+            apply_to=status
+            add=unplagueable
         [/effect]
     [/trait]
 #enddef
@@ -39,7 +47,15 @@
         description= _ "Immune to drain, poison, and plague"
         [effect]
             apply_to=status
-            add=not_living
+            add=unpoisonable
+        [/effect]
+        [effect]
+            apply_to=status
+            add=undrainable
+        [/effect]
+        [effect]
+            apply_to=status
+            add=unplagueable
         [/effect]
     [/trait]
 #enddef
@@ -54,7 +70,15 @@
         description= _ "Immune to drain, poison, and plague"
         [effect]
             apply_to=status
-            add=not_living
+            add=unpoisonable
+        [/effect]
+        [effect]
+            apply_to=status
+            add=undrainable
+        [/effect]
+        [effect]
+            apply_to=status
+            add=unplagueable
         [/effect]
     [/trait]
 #enddef
