@@ -3237,6 +3237,92 @@ Result:
         [/replace_schedule]
     [/event]
 
+    [label]
+        x,y=23,10
+        text="livingness"
+    [/label]
+    [event]
+        name=moveto
+        first_time_only=no
+        [filter]
+            x,y=23,10
+        [/filter]
+
+        [while]
+            [variable]
+                name="choice"
+                not_equals="done"
+            [/variable]
+            [do]
+                [store_unit]
+                    variable="wml_unit"
+                    [filter]
+                        x=$x1,y=$y1
+                    [/filter]
+                [/store_unit]
+                [message]
+                    speaker=narrator
+                    message="Unit statuses in WML:
+
+not_living: $wml_unit.status.not_living
+unpoisonable: $wml_unit.status.unpoisonable
+undrainable: $wml_unit.status.undrainable
+unplagueable: $wml_unit.status.unplagueable"
+                [/message]
+                [lua]
+                    code=<<
+                        local args = ...
+                        local unit = wesnoth.get_unit(args.x1, args.y1)
+                        local raw_msg = "Unit statuses in LUA:\
+\
+not_living: %s\
+unpoisonable: %s\
+undrainable: %s\
+unplagueable: %s"
+                        local msg = string.format(raw_msg, unit.status.not_living, unit.status.unpoisonable, unit.status.undrainable, unit.status.unplagueable)
+                        wesnoth.wml_actions.message({speaker = "narrator", message = msg})
+
+                        wesnoth.wml_actions.message({speaker = "narrator", message = "Do you want to change any of that?",
+                            { "option", { message = "Flip not_living",
+                                { "command", {
+                                    { "set_variable", { name = "choice", value = "not_living" } } } } } },
+                            { "option", { message = "Flip unpoisonable",
+                                { "command", {
+                                    { "set_variable", { name = "choice", value = "unpoisonable" } } } } } },
+                            { "option", { message = "Flip undrainable",
+                                { "command", {
+                                    { "set_variable", { name = "choice", value = "undrainable" } } } } } },
+                            { "option", { message = "Flip unplagueable",
+                                { "command", {
+                                    { "set_variable", { name = "choice", value = "unplagueable" } } } } } },
+                            { "option", { message = "Nope",
+                                { "command", {
+                                    { "set_variable", { name = "choice", value = "done" } } } } } }
+                        })
+                        local choice = wesnoth.get_variable("choice")
+                        -- debug :unit will reapply musthave traits, breaking these modifications for undead
+                        -- if you want something more permanent, give the unit an object
+                        if choice == "not_living" then
+                            unit.status.not_living = not unit.status.not_living
+                        elseif choice == "unpoisonable" then
+                            unit.status.unpoisonable = not unit.status.unpoisonable
+                        elseif choice == "undrainable" then
+                            unit.status.undrainable = not unit.status.undrainable
+                        elseif choice == "unplagueable" then
+                            unit.status.unplagueable = not unit.status.unplagueable
+                        end
+                    >>
+                    [args]
+                        x1=$x1
+                        y1=$y1
+                    [/args]
+                [/lua]
+            [/do]
+        [/while]
+        {CLEAR_VARIABLE choice}
+        {CLEAR_VARIABLE wml_unit}
+    [/event]
+
     # Capture connected villages near 13,2 for team 2
     [event]
         name=prestart
